crates/alder-parse/src/item/snapshots/alder_parse__item__let___tests__error_let_body.snap
---
source: crates/alder-parse/src/item/let_.rs
description: "let x = \"oops"
---
Let(
    Body(
        String(
            Endless,
            1,
            14,
        ),
        1,
        9,
    ),
    1,
    1,
)
