crates/alder-parse/src/item/snapshots/alder_parse__item__let___tests__error_let_type.snap
---
source: crates/alder-parse/src/item/let_.rs
description: "let x: = 1"
---
Let(
    Type(
        Start(
            1,
            8,
        ),
        1,
        8,
    ),
    1,
    1,
)
