crates/alder-parse/src/item/snapshots/alder_parse__item__let___tests__let_style.snap
---
source: crates/alder-parse/src/item/let_.rs
description: "let card = style { padding: 16px }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 35,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Let(
            LetDecl {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: Var(
                        "card",
                    ),
                },
                annotation: None,
                value: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 12,
                        },
                        end: Position {
                            line: 1,
                            column: 35,
                        },
                    },
                    value: Style(
                        Style {
                            entries: [
                                StyleEntry {
                                    key: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 20,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 27,
                                            },
                                        },
                                        value: Ident(
                                            "padding",
                                        ),
                                    },
                                    value: Dimension {
                                        number: NumberLit {
                                            value: 16.0,
                                            text: "16",
                                        },
                                        unit: "px",
                                    },
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
}
