crates/alder-parse/src/item/snapshots/alder_parse__item__let___tests__let_top.snap
---
source: crates/alder-parse/src/item/let_.rs
description: let x = 1
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Let(
            LetDecl {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
                annotation: None,
                value: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    value: Number(
                        NumberLit {
                            value: 1.0,
                            text: "1",
                        },
                    ),
                },
            },
        ),
    },
}
