crates/alder-parse/src/item/snapshots/alder_parse__item__let___tests__let_top_annotated.snap
---
source: crates/alder-parse/src/item/let_.rs
description: "let x: Number = 1"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Let(
            LetDecl {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
                annotation: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 8,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: Named {
                            path: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 8,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 14,
                                            },
                                        },
                                        value: "Number",
                                    },
                                ],
                            },
                            args: [],
                        },
                    },
                ),
                value: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 17,
                        },
                        end: Position {
                            line: 1,
                            column: 18,
                        },
                    },
                    value: Number(
                        NumberLit {
                            value: 1.0,
                            text: "1",
                        },
                    ),
                },
            },
        ),
    },
}
