crates/alder-parse/src/item/snapshots/alder_parse__item__let___tests__let_top_parens.snap
---
source: crates/alder-parse/src/item/let_.rs
description: let x = (a)
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Let(
            LetDecl {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
                annotation: None,
                value: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 12,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            },
        ),
    },
}
