crates/alder-parse/src/item/snapshots/alder_parse__item__let___tests__let_top_pub.snap
---
source: crates/alder-parse/src/item/let_.rs
description: pub let x = 1
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Item {
        attributes: [],
        visibility: Pub(
            Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
        ),
        kind: Let(
            LetDecl {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
                annotation: None,
                value: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                    value: Number(
                        NumberLit {
                            value: 1.0,
                            text: "1",
                        },
                    ),
                },
            },
        ),
    },
}
