crates/alder-parse/src/item/snapshots/alder_parse__item__let___tests__let_top_state.snap
---
source: crates/alder-parse/src/item/let_.rs
description: let count = state(0)
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 21,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Let(
            LetDecl {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    value: Var(
                        "count",
                    ),
                },
                annotation: None,
                value: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 21,
                        },
                    },
                    value: State(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 19,
                                },
                                end: Position {
                                    line: 1,
                                    column: 20,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 0.0,
                                    text: "0",
                                },
                            ),
                        },
                    ),
                },
            },
        ),
    },
}
